# HSLU.ROBO

./: addSSHKey.ps1  camera_subscriber.py  lane_follower_01.py  lane_follower_01_yf.py  lane_follower_01_yf2.py  line_follower.py  line_follower_01.py  wheel_command_publisher.py
docs/: Infos Robotics.docx  Robo_labyrinth.pptx  Robo_lane_follower.pptx  Robo_qt-bot short.pptx  Robo_qt-bot.pptx  Robo_ur-bot.pptx  Setup duckie.docx
duckie-bot/lab/: .gitignore  Aufgabe-Labyrinth.md  Aufgabe-LineFollower.md  Dockerfile  README.md  docker-compose.yml  image_processing.ipynb  iviz.md
duckie-bot/labyrinth/: bfs.py  labyrinth_logic.drawio
duckie-bot/line_follower/: lane_follower_01_yf2.py
duckiebot/labyrinth/: node_detection.py
duckiebot/line_follower/: breitenberg.py
lab/: camera_calibration.py  camera_subscriber.py  labyrinth.py  linefollower.py  pathfinder.py  stop.py  wheel_command_publisher.py  wheel_encoder.py
labyrinth/: bfs.py  camera_subscriber.py  labyrinth_navigator.py  lane_follower_02.py  line_follower.py  node_detection.py  turning.py  turning_logic.py  wheel_command_publisher.py
labyrinth/utils/: directions.py  labyrinths.py
line_follower/: lane_follower_02.py
qt-bot/lab/: Aufgabe-Butler.md  Aufgabe-ISpy.md  Dockerfile  QTRobot.md  README.md  docker-compose.yml  introduction_ROS.ipynb
qt-bot/lab/ai_nodes/custom/cv_pkg/: CMakeLists.txt  package.xml
qt-bot/lab/ai_nodes/custom/cv_pkg/scripts/: deep_face.py  deep_face_node.py  detectron.py  detectron_node.py
qt-bot/lab/ai_nodes/custom/speech_pkg/: CMakeLists.txt  package.xml
qt-bot/lab/ai_nodes/custom/speech_pkg/scripts/: audio_to_virtual_device_node.py  speech_recognition_microphone_node.py  speech_recognition_topic_node.py
qt-bot/src/custom_interfaces/: CMakeLists.txt  package.xml
qt-bot/src/custom_interfaces/msg/: BoundingBox.msg
qt-bot/src/custom_interfaces/srv/: Detectron.srv
ur-bot/lab/: .gitignore  Aufgabe-UniversalRobot.md  Dockerfile  Readme.md  docker-compose.yml  iviz.md
ur-bot/src/: home_script.py  (+4 more)
(+83 files in other folders)
